Drop coursier from scip-java (#888)
Removes coursier from build and runtime, and the multi-JDK test
subprojects (minimized17/21) and JavaToolchainPlugin that relied on it.
Callers must pre-resolve classpaths; `javacPath` requires `javaHome` or
JAVA_HOME. The `index-dependency` command and library snapshot
infrastructure (its only caller) are removed. Bazel/Maven/Gradle paths
are unaffected.

Falls out of `JavaToolchainPlugin` removal (sbt no longer silently pins
to JDK 11):
- Fork test JVMs and add `--add-exports` so JDK 17+ reflective javac
  access keeps working.
- Empty `-processorpath` + scope `-g` to `Compile / compile` so JDK 14+
  javac doesn't eagerly enumerate our Plugin descriptor and javadoc
  doesn't reject `-g`.
- `--release 11` on Java code so sbt-assembly's older ASM can still
  shade class files emitted by JDK 17/21.
- Override `SemanticdbVisitor#visitPackage` to stop traversal at the
  package node, matching pre-JDK-17 behavior.
- Bump byte-buddy to 1.15.11 so SemanticdbAgent can instrument code on
  JDK 21.
- Pin the JDK version embedded in stdlib SCIP symbols via a new
  `scip.jdk.version` system property (set to 11 in test JVMs and in
  `SaveSnapshots.main`) so snapshots are stable across the JDK matrix.

Snapshot infrastructure collapsed to a single concrete suite now that
`MinimizedSnapshotScipGenerator` is the only generator left.